--- a/game/templates/area_people.html
+++ b/game/templates/area_people.html
@@ -1,6 +1,7 @@
 <!-- 들어간 지역에 있는 사람들 보여주는 페이지 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,16 +20,17 @@
         crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-    <div class="container">
-        <!-- navbar 시작 -->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3d3d3d;">
-            <a class="navbar-brand" style="color: white;" href="#">먹이 사슬</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- <div class="collapse navbar-collapse" id="navbarNav">
+
+    <!-- navbar 시작 -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3d3d3d;">
+        <a class="navbar-brand" style="color: white;" href="#">먹이 사슬</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -44,15 +46,44 @@
                     </li>
                 </ul>
             </div> -->
-        </nav>
+    </nav>
 
+    <div class="container">
+        <!-- 내가 어느 지역에 들어왔는지를 보여줌 -->
         <div class="now_area">
-            <!-- 내가 어느 지역에 들어왔는지를 보여줌 -->
+            
         </div>
         <div class="now_people">
-            <!-- 사람들 리스트 보여줌-->
+            <!-- 공격하는 사람들 리스트-->
+            <div class="list_attacker">
+                <ul>
+                    <li>ss</li>
+                    <li>ddfff</li>
+                    <li>ff</li>
+                    <li>ff</li>
+                    <li>ff</li>
+                </ul>
+            </div>
+            <!-- 공격받는 사람들 리스트 -->
+            <div class="defender">
+                <ul>
+                    <li>ee</li>
+                    <li>ff</li>
+                    <li>ff</li>
+                    <li>ff</li>
+                    <li>ff</li>
+                </ul>
+            </div>
+
         </div>
     </div>
-    
+
 </body>
+
+<style>
+.list_attacker {
+    list-style: none;
+}    
+</style>
+
 </html>
