--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -62,6 +62,7 @@
                     <br>
                     <br>
                     <br>
+                    <br>
                 </div>
             </div>
 
@@ -72,6 +73,7 @@
                         <br>
                         <br>
                         <a href="#" class="card-link">강</a>
+                        <br>
                         <br>
                         <br>
                         <br>
@@ -87,6 +89,7 @@
                     <br>
                     <br>
                     <br>
+                    <br>
                 </div>
             </div>
             <div class="card" style="float:left; width: 100%; ">
@@ -95,6 +98,7 @@
                     <br>
                     <br>
                     <a href="#" class="card-link">숲</a>
+                    <br>
                     <br>
                     <br>
                     <br>
@@ -110,9 +114,12 @@
         text-align: center;
         padding-bottom: 100px;
     }
-
+    .choose_area h1 {
+        font-size: 2rem;
+    }
     .list_area {
         text-align: center;
+        font-size: 18px;
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
