--- a/game/templates/area_people.html
+++ b/game/templates/area_people.html
@@ -54,36 +54,41 @@
             
         </div>
         <div class="now_people">
+            <div class="빈 grid"> </div>
             <!-- 공격하는 사람들 리스트-->
-            <div class="list_attacker">
-                <ul>
-                    <li>ss</li>
-                    <li>ddfff</li>
-                    <li>ff</li>
-                    <li>ff</li>
-                    <li>ff</li>
-                </ul>
+            <div class="attacker">
+                <h3>공격하는 사람</h3>
+                <br>
+                <p>aa</p>
+                <p>bb</p>
+                <p>cc</p>
+                <p>dd</p>
             </div>
             <!-- 공격받는 사람들 리스트 -->
             <div class="defender">
-                <ul>
-                    <li>ee</li>
-                    <li>ff</li>
-                    <li>ff</li>
-                    <li>ff</li>
-                    <li>ff</li>
-                </ul>
+                <h3>공격받는 사람</h3>
+                <br>
+                <a href="">aa</a><br><br>
+                <a href="">bb</a><br><br>
+                <a href="">cc</a><br><br>
+                <a href="">dd</a><br><br>
             </div>
-
+            <div class="빈 grid"> </div>
         </div>
     </div>
 
 </body>
 
 <style>
-.list_attacker {
+ul {
     list-style: none;
-}    
+}  
+.now_people {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-top: 100px;
+    text-align: center;
+}
 </style>
 
 </html>
