--- a/game/templates/result.html
+++ b/game/templates/result.html
@@ -31,7 +31,7 @@
         </button>
         <!-- <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item active">git 
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
