--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -1,5 +1,6 @@
 <!-- 거주지역 선택하는 페이지 -->
 {% extends 'navbar_base.html' %}
+{% load staticfiles %}
 {% block content %}
 <!-- navbar 시작 -->
     <div class="container">
