role image plan

--- a/game/templates/role.html
+++ b/game/templates/role.html
@@ -6,8 +6,8 @@
     
     <div class="container">
         <div class="role_img">
-            <img src="{% static 'image/start/detective.png'%}">
-            <!-- <img src="{% static 'image/role/lion.png' }" alt="" > -->
+            
+            <img src="{% static 'image/role/lion.png' %}" alt="" >
         </div>
         <div class="role_name">
             <p>LION</p>
