--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
+<a href=" {% url 'login' %}"><h1>login</h1></a>
 <div class="start">
     <div class="start_img">
         <img src="{% static 'image/start/detective.png'%}">
