--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-<a href=" {% url 'login' %}"><h1>login</h1></a> <a href=" {% url 'logout' %}"><h1>logout</h1></a>
+{% if user.is_authenticated %}
+<a href=" {% url 'login' %}"><h1>login</h1></a> 
+{% else %}
+<a href=" {% url 'logout' %}"><h1>logout</h1></a>
+{% endif %}
 <div class="start">
     <div class="start_img">
         <img src="{% static 'image/start/detective.png'%}">
