--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-{% if user.is_authenticated %}
-<a href=" {% url 'login' %}"><h1>login</h1></a> 
-{% else %}
-<a href=" {% url 'logout' %}"><h1>logout</h1></a>
-{% endif %}
+<a href=" {% url 'login' %}"><h1>login</h1></a> <a href=" {% url 'logout' %}"><h1>logout</h1></a>
 <div class="start">
     <div class="start_img">
         <img src="{% static 'image/start/detective.png'%}">
