--- a/foodchain/templates/navbar_base.html
+++ b/foodchain/templates/navbar_base.html
@@ -9,12 +9,12 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700&amp;subset=korean" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3d3d3d;">
-        <a class="navbar-brand" style="color: white;" href="#">먹이 사슬</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4a7745;">
+        <a class="navbar-brand" style="color: white; font-family: Sunflower; font-size: 25px;" href="#">먹이 사슬</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
