--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-<a href=" {% url 'login' %}"><h1>login</h1></a> <a href=" {% url 'logout' %}"><h1>logout</h1></a>
+<div class="login">
+    <a href=" {% url 'login' %}"><h1>login</h1></a> 
+</div>
+<div class="logout">
+    <a href=" {% url 'logout' %}"><h1>logout</h1></a>
+</div>
 <div class="start">
     <div class="start_img">
         <img src="{% static 'image/start/detective.png'%}">
@@ -19,7 +24,9 @@
 
 
 <style>
-<<<<<<< HEAD
+.login {
+    text-align: right;
+}
 .start {
     position: relative;
 }
@@ -38,35 +45,5 @@
 .start_button {
     text-align: center; 
 }
-=======
-    /* body{
-    background: url(../image/start/detective.png) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover; */
-    /* } */
-    .start {
-        position: relative;
-    }
-
-    .start_img {
-        width: 30%;
-        margin: 0px auto;
-
-        text-align: center;
-
-
-    }
-
-    .start_img img {
-        width: 100%;
-        height: auto;
-    }
-
-    .start_button {
-        text-align: center;
-    }
->>>>>>> 10631c0c4b4eacd3f6bb9c10b28aee93c54fb94e
 </style>
 {% endblock %}
