user의 animal 받기

--- a/game/templates/role.html
+++ b/game/templates/role.html
@@ -15,6 +15,7 @@
             <p>LION</p>
         </div>
         <div class="role_detail">
+            {{your_kind}}
             <p>승리 조건: </p>
             <p>패배 조건: </p>
             <p>특이 사항: </p>
