--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -1,96 +1,62 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-<<<<<<< HEAD
-<div class="login">
-    <a href=" {% url 'login' %}"><h1>login</h1></a> 
-</div>
-<div class="logout">
-    <a href=" {% url 'logout' %}"><h1>logout</h1></a>
-</div>
-=======
-<<<<<<< HEAD
-<a href=" {% url 'login' %}"><h1>login</h1></a> <a href=" {% url 'logout' %}"><h1>logout</h1></a>
-=======
-{% if user.is_authenticated %}
-<a href=" {% url 'logout' %}"><h1>logout</h1></a>
-{% else %}
-<a href=" {% url 'login' %}"><h1>login</h1></a> 
-{% endif %}
 
-
-
-
->>>>>>> da8ac0b3d3f88af88d8e2543c79013c213537ac6
->>>>>>> e990a4f0b37eaefd50e6a1555f4f8e156649442e
 <div class="start">
-    <div class="start_img">
-        <img src="{% static 'image/start/detective.png'%}">
-        <h1>FOOD CHAIN</h1>
+
+    {% if user.is_authenticated %}
+    <div class="logout">
+        <a href=" {% url 'logout' %}">
+            <h1>logout</h1>
+        </a>
+    </div>
+    {% else %}
+    <div class="login">
+        <a href=" {% url 'login' %}">
+            <p>login</p>
+        </a>
+    </div>
+    {% endif %}
+    <br><br>
+    <div class="food_chain">
+        <p>먹이사슬</p>
     </div>
     <br>
-
     <div class="start_button">
         <button type="button" onclick="window.location.href='{% url "role" %}'" class="btn btn-light">START</button>
     </div>
-    <br>
-    <br>
+    <br> <br><br>
 </div>
 
 
 
 <style>
-<<<<<<< HEAD
-.login {
-    text-align: right;
-}
-.start {
-    position: relative;
-}
-.start_img {
-    width: 30%; 
-    margin:0px auto;
-
-    text-align: center; 
-    
-
-}
-.start_img img {
-    width: 100%; 
-    height: auto;
-}
-.start_button {
-    text-align: center; 
-}
-=======
-    /* body{
-    background: url(../image/start/detective.png) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover; */
-    /* } */
+    a {
+        all: unset;
+    }
+    .login {
+        text-align: right;
+        padding-top: 40px;
+        margin-right: 100px;
+        color: white;
+        font-family: East Sea Dokdo;
+        font-size: 35px;
+    }
+    .logout {
+        text-align: right;
+    }
     .start {
-        position: relative;
-    }
-
-    .start_img {
-        width: 30%;
-        margin: 0px auto;
-
-        text-align: center;
-
-
-    }
-
-    .start_img img {
         width: 100%;
-        height: auto;
+        background-image: url('static/image/start/nature.jpg');
     }
-
+    .food_chain {
+        text-align: center;
+        font-size: 300px;
+        font-family: East Sea Dokdo;
+        color: white;
+    }
     .start_button {
         text-align: center;
     }
->>>>>>> e990a4f0b37eaefd50e6a1555f4f8e156649442e
 </style>
 {% endblock %}
