--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -23,7 +23,7 @@
     </div>
     <br>
     <div class="start_button">
-        <button type="button" onclick="window.location.href='{% url "role" %}'" class="btn btn-light">START</button>
+        <button type="button" onclick="window.location.href='{% url "role" %}'" class="btn btn-dark btn-lg btn-primary" style="" >START</button>
     </div>
     <br> <br><br>
 </div>
@@ -57,6 +57,8 @@
     }
     .start_button {
         text-align: center;
+        font-family: East Sea Dokdo;
+        font-size: 30px;
     }
 </style>
 {% endblock %}
