이미지 랜덤 받아서 성공git add . ! 개꿀딱

--- a/game/templates/role.html
+++ b/game/templates/role.html
@@ -6,13 +6,10 @@
     
     <div class="container">
         <div class="role_img">
-            <!-- 이미지 파일을 아이디 값으로 바꾼 뒤에, role의 id값과 동일하게 받아와 해당 이미지 파일을 띄우자 -->
-            {{role}}
-            {{address}}
-            <img src="{% static 'role' %}" alt="" style="width:100px;">
+            <img src="{% static address %}" alt="" style="width:100px;">
         </div>
         <div class="role_name">
-            <p>LION</p>
+            <p>{{role}}</p>
         </div>
         <div class="role_detail">
             <p>승리 조건: </p>
