--- a/game/templates/role.html
+++ b/game/templates/role.html
@@ -35,10 +35,14 @@
     text-align:center;
     padding-top: 20px;
     font-size: 30px;
+    font-family: Noto Serif KR;
+    font-weight: 900;
 }
 .role_detail {
     text-align:center;
     padding-top: 20px;
+    font-family: Noto Serif KR;
+    font-size: 25px;
 
 }
 </style>
