--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -6,6 +6,12 @@
 <div class="container">
     <div class="choose_area">
         <p>들어갈 지역을 고르세요</p>
+        
+        
+        {{kind}}
+
+
+
     </div>
     <div class="list_area">
         <div class="빈 grid"></div>
