choose_area까지 거의 수정

--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -118,6 +118,10 @@
     a {
         all: unset;
     }
+    a:hover {
+        color: white;
+        cursor: pointer;
+    }
 </style>
 
 </html>
