--- a/game/templates/login.html
+++ b/game/templates/login.html
@@ -23,7 +23,7 @@
 
     body {
       font-family: 'Lato', sans-serif;
-      background-color:  #d2e6f3;
+      background-color:  #bff4ba;
     }
 
     body .container {
