--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -8,7 +8,7 @@
         <p>들어갈 지역을 고르세요</p>
         
         
-        {{kind}}
+        <!-- {{kind}} -->
 
 
 
@@ -77,10 +77,9 @@
         </div>
     </div>
     <div class="빈 grid"></div>
+    <br><br>
 </div>
 
-</div>
-</div>
 </body>
 
 <style>
