--- a/game/templates/start.html
+++ b/game/templates/start.html
@@ -6,13 +6,13 @@
     {% if user.is_authenticated %}
     <div class="logout">
         <a href=" {% url 'logout' %}">
-            <p>logout</p>
+            <p>로그아웃하기</p>
         </a>
     </div>
     {% else %}
     <div class="login">
         <a href=" {% url 'login' %}">
-            <p>login</p>
+            <p>로그인하기</p>
         </a>
     </div>
     {% endif %}
@@ -22,9 +22,9 @@
     </div>
     <div class="start_button">
         {% if user.is_authenticated %}
-        <button type="button" onclick="window.location.href='{% url "role" %}'" class="btn btn-outline-light" style="width: 150px; height: 60px; font-size: 20px; font-weight: 700;">START</button>
+        <button type="button" onclick="window.location.href='{% url "role" %}'" class="btn btn-outline-light" style="width: 150px; height: 60px; font-size: 32px; font-weight: 700; font-family: East Sea Dokdo; border-width: 2px;">시작하기</button>
         {% else %}
-        <button type="button" onclick="window.location.href='{% url "login" %}'" class="btn btn-outline-light" style="width: 150px; height: 60px; font-size: 20px; font-weight: 700;" >START</button>
+        <button type="button" onclick="window.location.href='{% url "login" %}'" class="btn btn-outline-light" style="width: 150px; height: 60px; font-size: 32px; font-weight: 700;font-family: East Sea Dokdo;border-width: 2px;" >시작하기</button>
         {% endif %}
     </div>
     <br> <br><br>
@@ -45,7 +45,7 @@
         padding-top: 40px;
         margin-right: 100px;
         color: white;
-        font-family: Nanum Gothic;
+        font-family: East Sea Dokdo;
         font-size: 35px;
     }
     .logout {
@@ -53,7 +53,7 @@
         padding-top: 40px;
         margin-right: 100px;
         color: white;
-        font-family: Nanum Gothic;
+        font-family: East Sea Dokdo;
         font-size: 40px;
     }
     .start {
