value 대소문자 수정

--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -25,7 +25,7 @@
             <div class="area-text">
                 <a href="javascript:{document.getElementById('sky').submit()}">SKY</a>
                 <form id="sky" method="get" action="{% url 'choose_process' %}">
-                    <input type="hidden" name="area" value="sky">
+                    <input type="hidden" name="area" value="SKY">
 
                 </form>
             </div>
@@ -40,7 +40,7 @@
             <div class="area-text">
                 <a href="javascript:{document.getElementById('river').submit()}">RIVER</a>
                 <form id="river" method="get" action="{% url 'choose_process' %}">
-                    <input type="hidden" name="area" value="river">
+                    <input type="hidden" name="area" value="RIVER">
                 </form>
             </div>
         </div>
@@ -57,7 +57,7 @@
             <div class="area-text">
                 <a href="javascript:{document.getElementById('field').submit()}">FIELD</a>
                 <form id="field" method="get" action="{% url 'choose_process' %}">
-                    <input type="hidden" name="area" value="field">
+                    <input type="hidden" name="area" value="FIELD">
                 </form>
             </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="area-text">
                 <a href="javascript:{document.getElementById('forest').submit()}">FOREST</a>
                 <form id="forest" method="get" action="{% url 'choose_process' %}">
-                    <input type="hidden" name="area" value="forest">
+                    <input type="hidden" name="area" value="FOREST">
                 </form>
             </div>
         </div>
