--- a/game/templates/result.html
+++ b/game/templates/result.html
@@ -1,49 +1,83 @@
 {% extends 'navbar_base.html' %}
 {% block content %}
 <!-- 사람들이 선택한 최종 결과 보여주는 페이지 -->
-    
-    <div class="container">
-        <!-- 몇 라운드인지 보여줌 -->
-        <div class="result_title">
-            <h2>ROUND 1 최종결과</h2>
-        </div>
-        <!-- 최종 결과 -->
-        <div class="result">
-            <div class="빈 grid"> </div>
-            <!-- 공격한 사람들 리스트-->
-            <div class="attacker">
-                <h3>공격한 사람</h3>
-                <br>
-                <p>aa</p>
-                <p>bb</p>
-                <p>cc</p>
-                <p>dd</p>
-            </div>
-            <!-- 공격받은 사람들 리스트 -->
-            <div class="defender">
-                <h3>공격받은 사람</h3>
-                <br>
-                <a href="">aa</a><br><br>
-                <a href="">bb</a><br><br>
-                <a href="">cc</a><br><br>
-                <a href="">dd</a><br><br>
-            </div>
-            <div class="빈 grid"> </div>
-        </div>
+
+<div class="container">
+    <!-- 몇 라운드인지 보여줌 -->
+    <div class="result_title">
+        <h2>ROUND {{situation.round}} 최종결과</h2>
     </div>
+    <!-- 최종 결과 -->
+    <div class="result">
+        <div class="빈 grid"> </div>
+        <!-- 공격한 사람들 리스트-->
+        <div class="attacker">
+            <h3>공격한 사람</h3>
+            <br>
+            <p>aa</p>
+            <p>bb</p>
+            <p>cc</p>
+            <p>dd</p>
+        </div>
+        <!-- 공격받은 사람들 리스트 -->
+        <div class="defender">
+            <h3>공격받은 사람</h3>
+            <br>
+            <a href="">aa</a><br><br>
+            <a href="">bb</a><br><br>
+            <a href="">cc</a><br><br>
+            <a href="">dd</a><br><br>
+        </div>
+        <div class="빈 grid"> </div>
+    </div>
+
+    <div class="result">
+
+
+        {% for one in situation %}
+            {% if one.attacker.animal.life == True %}
+            <div class="card">
+
+
+                {{one.location}}
+                <br>
+                {{one.attacker}} : {{one.attacker.animal}}
+                <br>
+                {{one.attacked}} : {{one.attacked.animal}}
+                <br>
+                공격 성공!
+            </div>
+            {% else %}
+            <div class="card">
+                {{one.location}}
+                <br>
+                {{one.attacker}} : {{one.attacker.animal}}
+                <br>
+                {{one.attacked}} : {{one.attacked.animal}}
+                <br>
+                공격 실패!
+            </div>
+            {% endif %}
+        
+        {% endfor %}
+
+
+    </div>
+    <a class="btn btn-primary" href="{% url 'choose_area' %}" role="button">다음 라운드 진행</a>
+</div>
 </body>
 <style>
-.result_title {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    .result_title {
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
 
-}
-.result {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    text-align: center;
-}
+    }
 
+    .result {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        text-align: center;
+    }
 </style>
 {% endblock %}
