--- a/game/templates/role.html
+++ b/game/templates/role.html
@@ -11,6 +11,7 @@
     <div class="role_all">
         <div class="role_name">
             <p>내가 할 역할: {{your_kind}}</p>
+            {{round}}
         </div>
         <div class="role_detail">
             <p>승리 조건: {{your_kind.victory_condition}}</p>
