refresh error 해결

--- a/game/templates/area_people.html
+++ b/game/templates/area_people.html
@@ -12,7 +12,7 @@
         <div class="now_people">
             <div class="빈 grid"> </div>
      
-         <form method="GET" action="{% url 'result' %}"> 
+         <form method="GET" action="{% url 'situation_create' %}"> 
             <div class="defender">
                 <h3>공격 받은 동물들</h3>
                 {% for animal in allobject %}
