--- a/game/templates/result.html
+++ b/game/templates/result.html
@@ -5,7 +5,7 @@
 <div class="container">
     <!-- 몇 라운드인지 보여줌 -->
     <div class="result_title">
-        <h2>ROUND {{situation.round}} 최종결과</h2>
+        <h2>ROUND {{round}} 최종결과</h2>
     </div>
     <!-- 최종 결과 -->
     <div class="result">
