SITUATION 데이터 날리기

--- a/game/templates/endgame.html
+++ b/game/templates/endgame.html
@@ -2,5 +2,6 @@
 {% load staticfiles %}
 {% block content %}
 <h1>당신은 죽었습니다!</h1>
-
+<p>admin 계정이 게임을 다시 시작해야 게임을 진행할 수 있습니다.</p>
+<a class="btn btn-primary" href="{% url 'start' %}" role="button">처음으로</a>
 {% endblock %}
