--- a/game/templates/area_people.html
+++ b/game/templates/area_people.html
@@ -20,7 +20,7 @@
                 <br>
                 
                 {% endfor %}
-                <input type="radio" name="animal" value="{{animal.ID}}" />공격안하기
+                <input type="radio" name="animal" value="{{user}}" />공격안하기
             </div>
             <input type="submit" value="공격" >
         
