--- a/game/templates/result.html
+++ b/game/templates/result.html
@@ -8,59 +8,25 @@
         <h2>ROUND {{round}} 최종결과</h2>
     </div>
     <!-- 최종 결과 -->
-    <div class="result">
-        <div class="빈 grid"> </div>
-        <!-- 공격한 사람들 리스트-->
-        <div class="attacker">
-            <h3>공격한 사람</h3>
-            <br>
-            <p>aa</p>
-            <p>bb</p>
-            <p>cc</p>
-            <p>dd</p>
-        </div>
-        <!-- 공격받은 사람들 리스트 -->
-        <div class="defender">
-            <h3>공격받은 사람</h3>
-            <br>
-            <a href="">aa</a><br><br>
-            <a href="">bb</a><br><br>
-            <a href="">cc</a><br><br>
-            <a href="">dd</a><br><br>
-        </div>
-        <div class="빈 grid"> </div>
-    </div>
+    
 
     <div class="result">
-
-
         {% for one in situation %}
+        <div class="card">
+            공격자 : {{one.attacker}} : {{one.attacker.animal}}
+            <br>
+            피식자 : {{one.attacked}} : {{one.attacked.animal}}
+            <br>
+            result :
             {% if one.attacker.animal.life == True %}
-            <div class="card">
-
-
-                {{one.location}}
-                <br>
-                {{one.attacker}} : {{one.attacker.animal}}
-                <br>
-                {{one.attacked}} : {{one.attacked.animal}}
-                <br>
-                공격 성공!
-            </div>
+            <p>성공</p>
             {% else %}
-            <div class="card">
-                {{one.location}}
-                <br>
-                {{one.attacker}} : {{one.attacker.animal}}
-                <br>
-                {{one.attacked}} : {{one.attacked.animal}}
-                <br>
-                공격 실패!
-            </div>
+            <p>실패</p>
             {% endif %}
-        
-        {% endfor %}
+        </div>
+        <br>
 
+        {% endfor %}
 
     </div>
     <a class="btn btn-primary" href="{% url 'choose_area' %}" role="button">다음 라운드 진행</a>
